# OPENCLASSROOMS_Anticipez-_les_besoins_en_consommations_de-b-timents

./: .gitignore  README.md  valerian_barreau_presentation_anticiper_les_besoins_en_consomations_de_batiments01062025.pptx  ~$valerian_barreau_presentation_anticiper_les_besoins_en_consomations_de_batiments01062025.pptx
consommation_batiment/: pyproject.toml  valerian_barreau_2_notebooks_ipynb.ipynb  valerian_barreau_3_notebooks_01062025.ipynb
consommation_batiment/.ipynb_checkpoints/: P3_template_modelistation_supervis_modifier_2-checkpoint.ipynb  P3_template_modelistation_supervis_modifier_3-checkpoint.ipynb  pyproject-checkpoint.toml
